--- a/cloud-custodian-cron/templates/cronjob.yaml
+++ b/cloud-custodian-cron/templates/cronjob.yaml
@@ -3,9 +3,9 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: "{{ include "cloud-custodian-cron.fullname" $ }}-{{ $scheduledPolicy.name }}"
+  name: "{{ include "cloud-custodian-cron.fullname" . }}-{{ $scheduledPolicy.name }}"
   labels:
-    {{- include "cloud-custodian-cron.labels" $ | nindent 4 }}
+    {{- include "cloud-custodian-cron.labels" . | nindent 4 }}
 spec:
 {{- $concurrencyPolicies := list "Allow" "Forbid" "Replace" }}
 {{- if has $scheduledPolicy.concurrencyPolicy $concurrencyPolicies }}
@@ -21,32 +21,32 @@ spec:
       backOffLimit: 
       template:
         metadata:
-          {{- with $.Values.podAnnotations }}
+          {{- with .Values.podAnnotations }}
           annotations:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           labels:
-            {{- include "cloud-custodian-cron.selectorLabels" $ | nindent 12 }}
+            {{- include "cloud-custodian-cron.selectorLabels" . | nindent 12 }}
         spec:
           volumes:
           - name: policy
             configMap:
-              name: "{{ include "cloud-custodian-cron.fullname" $ }}-{{ $scheduledPolicy.name }}"
-          {{- with $.Values.imagePullSecrets }}
+              name: "{{ include "cloud-custodian-cron.fullname" . }}-{{ $scheduledPolicy.name }}"
+          {{- with .Values.imagePullSecrets }}
           imagePullSecrets:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          serviceAccountName: {{ include "cloud-custodian-cron.serviceAccountName" $ }}
+          serviceAccountName: {{ include "cloud-custodian-cron.serviceAccountName" . }}
           securityContext:
-            {{- toYaml $.Values.podSecurityContext | nindent 12 }}
+            {{- toYaml .Values.podSecurityContext | nindent 12 }}
           containers:
-          - name: {{ $.Chart.Name }}
+          - name: {{ .Chart.Name }}
             securityContext:
-              {{- toYaml $.Values.securityContext | nindent 14 }}
-            image: "{{ $.Values.image.repository }}:{{ $.Values.image.tag | default $.Chart.AppVersion }}"
-            imagePullPolicy: {{ $.Values.image.pullPolicy }}
+              {{- toYaml .Values.securityContext | nindent 14 }}
+            image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+            imagePullPolicy: {{ .Values.image.pullPolicy }}
             args: ["-v", "-s", "/home/custodian/policies.yml"]
-            {{- with $.Values.envVars }}
+            {{- with .Values.envVars }}
             env:
               {{- toYaml . | nindent 14 }}
             {{- end }}
@@ -54,16 +54,16 @@ spec:
             - name: policy
               mountPath: /home/custodian
             resources:
-              {{- toYaml $.Values.resources | nindent 14 }}
-          {{- with $.Values.nodeSelector }}
+              {{- toYaml .Values.resources | nindent 14 }}
+          {{- with .Values.nodeSelector }}
           nodeSelector:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          {{- with $.Values.affinity }}
+          {{- with .Values.affinity }}
           affinity:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          {{- with $.Values.tolerations }}
+          {{- with .Values.tolerations }}
           tolerations:
             {{- toYaml . | nindent 12 }}
           {{- end }}
